--- a/templates/gallery/showcase.html
+++ b/templates/gallery/showcase.html
@@ -14,13 +14,20 @@
 
 {% block content %}
     <div class="container">
-        <div class="text-center jumbotron">
-            <h5>
-                {{ section_title.1 }}
-            </h5>
+        <div class="text-center jumbotron bg-primary m-0">
+
+            <h2>
+                ~ {{ section_title.0 }} ~
+            </h2>
+
+            <p>
+                ARTWORKS COLLECTION
+            </p>
             <h1>
-                {{ section_title.0 }}
+                {{ section_title.1 }}
             </h1>
+
+
             </div>
         <div id="macy-container">
             {% for pin in pins %}
