--- a/templates/gallery/showcase.html
+++ b/templates/gallery/showcase.html
@@ -17,7 +17,7 @@
         <div class="text-center jumbotron bg-primary m-0">
 
             <h2>
-                ~ {{ section_title.0 }} ~
+                {{ section_title.0 }}
             </h2>
 
             <p>
