--- a/templates/gallery/section_list.html
+++ b/templates/gallery/section_list.html
@@ -30,25 +30,14 @@ html {
 .bsnav {
 }
 
-.sectionImagesContainer {
-    box-sizing: border-box;
-    text-align: center;
-}
-
 .sectionImage {
     box-sizing: border-box;
-    background-color: #f2f3f7;
 }
 
 
 h3 {
     margin: 0 !important;
     padding: 0 !important;
-}
-
-.sectionWrapper {
-    text-decoration: none;
-    color: grey;
 }
 
 .bg-1 {
@@ -69,8 +58,26 @@ h3 {
 
 @media (orientation: portrait) {
   .container {
-    max-width: 70%;
+    max-width: 90%;
   }
+}
+
+     .row {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 4px;
+}
+
+     .column {
+  flex: 50%;
+  max-width: 50%;
+  padding: 0 4px;
+}
+
+     .column img {
+  margin-top: 8px;
+  vertical-align: middle;
+  width: 100%;
 }
 
     </style>
@@ -79,40 +86,7 @@ h3 {
 
 </head>
 
-<! -- navigation -->
-<div class="wrapper" id="my-page">
-<a href="#menu" id="open-button">Open the menu</a>
-
-<a href="#my-page" id="close-button">close the menu</a>
-<nav id="menu" class="shadow">
-
-				<ul id="panel-menu">
-					<li><a href="#/">Home</a></li>
-					<li><a href="#/work">Our work</a></li>
-					<li><span>About us</span>
-						<ul>
-							<li><a href="#/about/history">History</a></li>
-							<li><span>The team</span>
-								<ul>
-									<li><a href="#/about/team/management">Management</a></li>
-									<li><a href="#/about/team/sales">Sales</a></li>
-									<li><a href="#/about/team/development">Development</a></li>
-								</ul>
-							</li>
-						</ul>
-					</li>
-					<li><span>Services</span>
-						<ul>
-							<li><a href="#/services/design">Design</a></li>
-							<li><a href="#/services/development">Development</a></li>
-							<li><a href="#/services/marketing">Marketing</a></li>
-						</ul>
-					</li>
-					<li><a href="#/contact">Contact</a></li>
-				</ul>
-			</nav>
-
-
+{% include './partials/nav-bar.html' %}
 
 
 <! -- main -->
@@ -120,18 +94,17 @@ h3 {
     <div class="container macy-container">
         {% if section_list %}
             {% for section in section_list %}
-                <div class="border border-light shadow card bg-primary p-1 bg-1">
-
-                    <div class="text-black rounded text-center p-1 pt-4 pb-3 m-2">
+                <div class="border border-light shadow card bg-primary bg-1">
+                    <div class="text-black rounded text-center p-2 mt-4 pb-2">
                         <a class="" href="{{ section.slug }}">
-                            <h3 >{{ section.title_custom_split.0 }}</h3>
+                            <h3> {{ section.title_custom_split.0 }} </h3>
                         </a>
                     </div>
 
-                    <a class=" row sectionImagesContainer mr-3 ml-3" href="{{ section.slug }}">
+                    <a class="row pr-5 pl-5" href="{{ section.slug }}">
                         {% for pin in section.pin_set.all|slice:":2" %}
-                            <div class=" col-6">
-                                <img src="{{ pin.small_image_url }}" alt="" class="sectionImage shadow-lg rounded">
+                            <div class="pr-1 pl-1 column">
+                                <img src="{{ pin.small_image_url }}" alt="" class="shadow-lg rounded">
                             </div>
 
                         {% endfor %}
@@ -166,7 +139,6 @@ h3 {
 <! -- navigation mobile -->
 
 <! -- scripts -->
-
 <script src="{% static '/vendor/macy.js/2.5.1/js/macy.min.js' %}"></script>
 <script src="{% static '/vendor/jquery/3.5.1/js/jquery.min.js' %}"></script>
 <script src="{% static '/vendor/bootstrap/4.5.3/js/bootstrap.min.js' %}"></script>
@@ -177,120 +149,11 @@ h3 {
 <script src="{% static '/vendor/mmenu.js/8.5.19/js/mburger.js' %}"></script>
 <script src="{% static '/vendor/fancybox/3.5.7/js/jquery.fancybox.min.js' %}"></script>
 <script src="{% static 'neomorphism/assets/js/neumorphism.js' %}"></script>
+<script src="{% static '/gallery/js/init_header.js' %}"></script>
 
+{% include './partials/scripts/script_init_grid.html' with margin=18 columns=4 b1280=3 b920=2 b720=2 only %}
 
 <! -- macy -->
-
-
-<script>
-    document.addEventListener(
-        "DOMContentLoaded", () => {
-            new Mmenu( "#menu", {
-
-                extensions: ["shadow-page", "multiline", "pagedim-white", "sidebar"],
-                sidebar: {
-                    collapsed: "(min-width: 550px)",
-                    expanded: "(min-width: 700px)",
-                    blockMenu: false,
-                    hideNavbar: true
-                },
-               "iconPanels": true,
-                "navbars": [
-                  {
-                     "position": "top",
-                     "content": [
-                        "<a><h3 href='#/'>#AESTHETICLIMBO</h3></a>"
-                     ]
-                  },
-                    {
-                     "position": "top",
-                     "type": "tabs",
-                     "content": [
-                        "<a href='#panel-menu'><i class='fa fa-home'></i></a>",
-                        "<a></a>",
-                        "<a href='#panel-language'>Log in</a>",
-                     ]
-                  },
-                    {
-                     "position": "bottom",
-                     "content": [
-                        "searchfield"
-                     ]
-                  },
-                    {
-                     "position": "bottom",
-                     "content": [
-                        "<a class='fa fa-envelope' href='#/'></a>",
-                        "<a class='fa fa-twitter' href='#/'></a>",
-                        "<a class='fa fa-facebook' href='#/'></a>"
-                     ]
-                  }
-               ],
-                "iconbar": {
-                  "use": true,
-                  "top": [
-                     "<a href='#/'><i class='fa fa-home'></i></a>",
-                     "<a href='#/'><i class='fa fa-user'></i></a>"
-                  ],
-                  "bottom": [
-                     "<a href='#/'><i class='fa fa-twitter'></i></a>",
-                     "<a href='#/'><i class='fa fa-facebook'></i></a>",
-                     "<a href='#/'><i class='fa fa-linkedin'></i></a>"
-                  ]
-               },
-                "searchfield": {
-                  "showTextItems": true,
-                    "clear": true
-               },
-                "setSelected": {
-                  "hover": true,
-                  "parent": true
-               },
-            }, {
-                // configuration
-                offCanvas: {
-                    page: {
-                        selector: "#my-page"
-                    }
-                }
-            });
-
-            const api = menu.API;
-
-            document.querySelector( "#open-button" )
-                .addEventListener(
-                    "click", ( evnt ) => {
-                        evnt.preventDefault();
-                        api.open();
-                    })
-
-
-            document.querySelector( "#close-button" )
-                .addEventListener(
-                    "click", ( evnt ) => {
-                        evnt.preventDefault();
-                        api.close();
-                    }
-                );
-
-
-        }
-    );
-</script>
-
-
-
-<script>
-    document.addEventListener(
-        "DOMContentLoaded", () => {
-            new Mmenu( "#about", {
-               "autoHeight": true,
-               "dropdown": true,
-                "pageScroll": true
-            });
-        }
-    );
-</script>
 
 
   <script>
@@ -301,12 +164,12 @@ function doALoadOfStuff() {
     container: '.macy-container',
     trueOrder: true,
     waitForImages: true,
-    margin: 25,
+    margin: 18,
     columns:4,
     breakAt: {
         1280: 3,
         920: 2,
-        720: 1
+        720: 2
 }});
 }
 doALoadOfStuff()
