--- a/templates/gallery/partials/imports/import-static-css.html
+++ b/templates/gallery/partials/imports/import-static-css.html
@@ -14,6 +14,9 @@
 {% fontawesome_5_static %}
 <!-- theme -->
 <link rel="stylesheet" type="text/css" href="{% static '/themes/neumorphism/css/neumorphism.css' %}">
-<link rel="stylesheet" type="text/css" href="{% static '/gallery/showcase.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static '/gallery/css/showcase.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static '/gallery/css/section_list.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static '/gallery/css/container.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static '/gallery/css/gradients.css' %}">
 <!-- fonts -->
 <link href="https://fonts.googleapis.com/css2?family=Turret+Road:wght@500&display=swap" rel="stylesheet">
