--- a/templates/gallery/partials/scripts/script_init_grid.html
+++ b/templates/gallery/partials/scripts/script_init_grid.html
@@ -1,10 +1,10 @@
-{{ grid_margin|json_script:"grid_margin" }}
+{{ margin|json_script:"margin" }}
 {{ columns|json_script:"columns" }}
 {{ b1280|json_script:"b1280" }}
 {{ b920|json_script:"b920" }}
 {{ b720|json_script:"b720" }}
 <script>
-let grid_margin = JSON.parse(document.getElementById('grid_margin').textContent);
+let margin = JSON.parse(document.getElementById('margin').textContent);
 let columns = JSON.parse(document.getElementById('columns').textContent);
 let b1280 = JSON.parse(document.getElementById('b1280').textContent);
 let b920 = JSON.parse(document.getElementById('b920').textContent);
@@ -17,7 +17,7 @@ function doALoadOfStuff() {
     container: '#macy-container',
     trueOrder: true,
     waitForImages: true,
-    margin: grid_margin,
+    margin: margin,
     columns: columns,
     breakAt: {
         1280: b1280,
